# metallumapi

./: README.md  example.py  pyproject.toml
.github/workflows/: build.yml
metallum/: __init__.py  consts.py  operations.py  utils.py
metallum/models/: __init__.py  album_types.py  lyrics.py  metallum.py  metallum_collection.py  metallum_entity.py  results.py  search.py  similar_artists.py
tests/: test_metallum_operations.py
